--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "temple",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/yht-temple-websiteHosting",
+  "homepage": "https://githubHemanth.github.io/temple",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
